--- a/view/base.templ
+++ b/view/base.templ
@@ -6,10 +6,10 @@ templ Base() {
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<title>Finances</title>
+			<title>Mapa Pontos de Coleta</title>
 
-			<script src="/public/scripts/htmx.min.js"></script>
-			<script src="/public/scripts/response-targets.js"></script>
+			<script src="/static/scripts/htmx.min.js"></script>
+			<script src="/static/scripts/response-targets.js"></script>
 			</head>
 			<body hx-boot="true" hx-ext="response-targets">
 			{ children... }
