--- a/view/base.templ
+++ b/view/base.templ
@@ -8,7 +8,18 @@ templ Base() {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>Mapa Pontos de Coleta</title>
 
+			// Map Leaflet code
+			<script src="/static/map.js"></script>
+
+			// Leaflet CSS
+			<link rel="stylesheet" href="/static/css/leaflet.css"/>
+
+			// Style
+			<link rel="stylesheet" href="/static/css/styles.css"/>
+			
+			// HTMX
 			<script src="/static/scripts/htmx.min.js"></script>
+			// HTMX extension to deal with 4xx and 5xx responses
 			<script src="/static/scripts/response-targets.js"></script>
 			</head>
 			<body hx-boot="true" hx-ext="response-targets">
