remove htmx | add style

--- a/view/base.templ
+++ b/view/base.templ
@@ -10,11 +10,11 @@ templ Base() {
 
 			// Leaflet CSS
 			<link rel="stylesheet" href="/static/css/leaflet.css"/>
+			// Custom Styles
+			<link rel="stylesheet" href="/static/css/style.css"/>
 			// Leaflet JS
 			<script src="static/scripts/leaflet.js"></script>
 
-			// HTMX
-			<script src="/static/scripts/htmx.min.js"></script>
 		</head>
 			<body hx-boot="true">
 			{ children... }
